<resources>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
	<string name="app_name">Be Happy!</string>
	<string name="action_settings">Settings</string>
	<string name="behappy">be Happy!</string>
	<string name="jogos">Jogos</string>
	<string name="desafio">Desafios</string>
	<string name="noticia">Notícias</string>
	<string name="diagnostico">Diagnóstico</string>
	<string name="home">Home</string>
    <string name="cadastroresponsavel">Cadastro de Responsável</string>
    <string name="email">E-mail</string>
    <string name="confsenha">Confirme a senha</string>
    <string name="cartas">Cartas</string>
    <string name="jogomemoria">Jogo da memória</string>
	<string name="quebra">Quebra Cabeça</string>
	<string name="memoria">Jogo da Memória</string>
	<string name="DialogFrase">O jogo terminou!</string>
	<string name="DialogJogo">Deseja jogar novamente?</string>
	<string name="respDialogSim">Sim</string>
	<string name="respDialogNao">Não</string>
	<string name="forca">Forca</string>
	<string name="desafiotela">Desafio</string>
	<string name="gameactivity">Desafio da Forca</string>
	<string name="educacional">Educacional</string>
	<string name="fale">Fale Comigo</string>
	<string name="banheiro">Quero ir ao banheiro!</string>
	<string name="sono">Estou com sono!</string>
	<string name="banho">Quero tomar banho!</string>
	<string name="fome">Estou com fome!</string>
	<string name="sede">Estou com sede!</string>
	<string name="corAmarela">Amarelo</string>
	<string name="corVerde">Verde</string>
	<string name="corAzul">Azul</string>
	<string name="corVermelha">Vermelho</string>
	<string name="selecFonte">Selecione a fonte</string>
	<string name="fonte">Fontes</string>
	<string name="cores">Cores</string>
	<string name="selecCor">Selecione a cor</string>
    <string name="selecionarusuario">Selecione o usuário padrão</string>
		<string name="cadastrodep">Cadastro de dependente</string>
		<string name="dependente">Dependente</string>
		<string name="cadastrar">Cadastrar</string>
	<string name="titleeditarcadastro">Editar Cadastro</string>
    <string name="checknewpassword">Alterar senha atual</string>
    <string name="edittextnewpassword">Nova senha</string>
	<string name="edittextconfirmpassword">Confirmar nova senha</string>
	<string name="edittextpassword">Senha atual</string>
	<string name="btneditaccount">Salvar</string>
<string name="formulario">Formulário</string>
<string name="sinaisalerta">Sinais de Alerta</string>
<string name="unidadessaude">Unidades de Saúde</string>
	<string name="form_info1">Preencha as questões abaixo sobre como seu filho geralmente se comporta, tentando responder a todas as questões. Caso o comportamento na questão seja raro (Ex.: Você só observou uma ou duas vezes), por favor responda como se seu filho não fizesse tal comportamento.</string>
	<string name="q1">1. Seu filho gosta de se balançar, de pular no seu joelho, etc?</string>
	<string name="q2">2. Seu filho tem interesse por outras crianças?</string>
	<string name="q3">3. Seu filho gosta de subir em coisas, como escadas ou móveis?</string>
	<string name="q4">4. Seu filho gosta de brincar de esconder e mostra o rosto ou de esconde-esconde?</string>
	<string name="q5">5. Seu filho já brincou de faz-de-conta, como por exemplo, fazer de conta que está falando ao telefone ou que está cuidando da boneca, ou qualquer outra brincadeira de faz-de-conta?</string>
	<string name="q6">6. Seu filho já usou o dedo indicador dele para apontar, para pedir alguma coisa?</string>
	<string name="q7">7. Seu filho já usou o dedo indicador dele para apontar, para indicar interesse em algo?</string>
	<string name="q8">8. Seu filho consegue brincar de forma correta com brinquedos pequenos (Ex.: Carros ou blocos), sem apenas colocar na boca, remexer no brinquedo ou deixar o brinquedo cair?</string>
	<string name="q9">9. O seu filho alguma vez trouxe objetos para você (pais) para lhe mostrar este objeto?</string>
	<string name="q10">10. O seu filho olha para você no olho por mais de um segundo ou dois?</string>
	<string name="q11">11. O seu filho já pareceu muito sensível ao barulho (Ex.: tapando os ouvidos)</string>
	<string name="q12">12. O seu filho sorri em respostas ao seu rosto ou ao seu sorriso?</string>
	<string name="q13">13. O seu filho o imita? (Ex.: Você faz expressões ou caretas e seu filho o imita?)</string>
	<string name="q14">14. O seu filho responde quando você o chama pelo nome?</string>
	<string name="q15">15. Se você aponta um brinquedo do outro lado do cômodo, o seu filho olha para ele?</string>
	<string name="q16">16. Seu filho já sabe andar?</string>
	<string name="q17">17. O seu filho olha para coisas que você está olhando?</string>
	<string name="q18">18. O seu filho faz movimentos estranhos com os dedos perto do rosto dele?</string>
	<string name="q19">19. O seu filho tenta atrair a sua atenção para a atividade dele?</string>
	<string name="q20">20. Você alguma vez já se perguntou se seu filho é surdo?</string>
	<string name="q21">21. O seu filho entende o que as pessoas dizem?</string>
	<string name="q22">22. O seu filho às vezes fica “aéreo”, “olhando para o nada” ou caminha sem direção definida?</string>
	<string name="q23">23. O seu filho olha para o seu rosto para conferir a sua reação quando vê algo estranho?</string>
	<string name="y">Sim</string>
	<string name="n">Não</string>
	<string name="report_email">Email para envio:</string>
	<string name="report_name">Nome</string>
	<string name="report">Diagnóstico:</string>
	<string name="send">Enviar</string>
	<string name="title_activity_mail_report">Enviando email</string>
    <string-array name="type">
        <item>Novo Jogo</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>4 X 6</item>
        <item>5 X 6</item>
        <item>6 X 6</item>
    </string-array>
    <string name="p1">Os pais geralmente são os primeiros a notar os primeiros sinais do autismo. Você provavelmente percebeu que seu filho estava se desenvolvendo de forma diferente das outras crianças da mesma idade. As diferenças podem ter existido desde o nascimento ou podem ter-se tornado mais visíveis mais tarde. Em alguns casos, as diferenças são importantes e óbvias para todos. Em outros, são mais sutis.</string>
    <string name="p2">A falta dos seguintes sinais não significa que seu filho tenha Autismo, apenas que ele deve ser avaliado por um profissional que conheça desenvolvimento infantil!</string>
    <string name="s6">Aos 6 Meses</string>
    <string name="s61">Não faz aqueles sorrisos gostosos ou expressões alegres;</string>
    <string name="s9">Aos 9 Meses</string>
    <string name="s91">Não responde às tentativas de interação feita pelos outros, quando esses sorriem, fazem caretas, sons;
Não busca a interação emitindo sons, sorrisos ou caretas.</string>
    <string name="doze">Aos 12 Meses</string>
    <string name="dozeum">Não balbucia ou se expressa “como um bebê”;
Não responde ao seu nome quando chamado;
Não segue com o olhar gestos que os outros lhe fazem;</string>
    <string name="s18">Aos 18 Meses</string>
    <string name="s181">Não fala palavras e não expressa o que quer;</string>
    <string name="s24">Aos 24 Meses</string>
    <string name="s241">Não fala frases de duas palavras que não sejam apenas imitação ou repetição (Ex.: “Colo, mamãe”);</string>
	<string name="sinais">Sinais de alerta</string>
	<string name="parag1">Os pais geralmente são os primeiros a notar os primeiros sinais do autismo. Você provavelmente percebeu que seu filho estava se desenvolvendo de forma diferente das outras crianças da mesma idade. As diferenças podem ter existido desde o nascimento ou podem ter-se tornado mais visíveis mais tarde. Em alguns casos, as diferenças são importantes e óbvias para todos. Em outros, são mais sutis.</string>
	<string name="parag2">A falta dos seguintes sinais não significa que seu filho tenha Autismo, apenas que ele deve ser avaliado por um profissional que conheça desenvolvimento infantil!</string>
	<string name="sinal6">Aos 6 Meses</string>
	<string name="paragSinal6">Não faz aqueles sorrisos gostosos ou expressões alegres;</string>
	<string name="sinal9">Aos 9 Meses</string>
	<string name="paragSinal9">Não responde às tentativas de interação feita pelos outros, quando esses sorriem, fazem caretas, sons; Não busca a interação emitindo sons, sorrisos ou caretas.</string>
	<string name="sinal12">Aos 12 Meses</string>
	<string name="paragSinal12">Não balbucia ou se expressa “como um bebê”; Não responde ao seu nome quando chamado; Não segue com o olhar gestos que os outros lhe fazem;</string>
	<string name="sinal18">Aos 18 Meses</string>
	<string name="paragSinal18">Não fala palavras e não expressa o que quer;</string>
	<string name="sinal24">Aos 24 Meses</string>
	<string name="paragSinal24">Não fala frases de duas palavras que não sejam apenas imitação ou repetição (Ex.: “Colo, mamãe”);</string>
	<string name="unidades">Unidades de saúde</string>
	<string name="unidSaudeMental">Unidades de Saúde Mental</string>
	<string name="unid1">Unidade: CAPS AD PROFESSOR LUIZ CERQUEIRA; Endereço: RUA ALVARES DE AZEVEDO, 80 – ? SANTO AMARO;Fone: 3355–4260</string>
	<string name="unid2">Unidade: CAPS BOA VISTA;Endereço: RUA GENERAL JOSE SEMEAO, 146 – BOA VISTA;Fone: 3355–4778</string>
	<string name="unid3">Unidade: CAPS JOSE CARLOS SOUTO;Endereço: RUA DJALMA FARIAS, 135 – TORREAO;Fone: 3355–4300</string>
	<string name="unid4">Unidade: CAPS INFANTIL PROFESSOR ZALDO ROCHA;Endereço: RUA CASTRO ALVES, 143 – ENCRUZILHADA;Fone: 3554304</string>
	<string name="unid5">Unidade: CAPS AD ESTACAO VICENTE ARAUJO;Endereço: RUA CARLOS FERNANDES, 220 – ENCRUZILHADA;Fone: 3355–4252</string>
	<string name="unid6">Unidade: CAPS ESPERANCA;Endereço: RUA JOSE CARVALHEIRA, NÂ§ 415 – TAMARINEIRA;Fone: 3355–4304</string>
	<string name="unid7">Unidade: CAPS AD CENTRO DE PREVENCAO TRATAMENTO E REABILITACAO DE ALCOOLISMO – CPTRA;Endereço: AV CONSELHEIRO ROSA E SILVA, 2130 – TAMARINEIRA;Fone: 3355–4324</string>
	<string name="unid8">Unidade: CAPS ESPACO AZUL;Endereço: AV NORTE, 5035 - TAMARINEIRA;Fone: 3355–4280</string>
	<string name="unid9">Unidade: CAPS ESPACO VIDA;Endereço: RUA AMBROSIO MACHADO, 280 – IPUTINGA;Fone: 3355–4288</string>
	<string name="unid10">Unidade: CAPS AD CENTRO EULAMPIO CORDEIRO DE RECUPERACAO HUMANA;Endereço: RUA RONDONIA, 100 – ZUMBI;Fone: 3355–4313</string>
	<string name="unid11">Unidade: CAPS GALDINO LORETO;Endereço: RUA EMILIA TORREAO, 135 – AFOGADOS;Fone: 3355–4296</string>
	<string name="unid12">Unidade: CAPS AD ESPACO TRAVESSIA RENE RIBEIRO;Endereço: RUA JACIRA, 210 – AFOGADOS;Fone: 3355–3346</string>
	<string name="unid13">Unidade: CAPS CLEA LACET–ADOLESCENTES;Endereço: RUA EMILIA TORREAO, 145 – AFOGADOS;Fone: 3355–4272</string>
	<string name="unid14">Unidade: CEMPI CENTRO MEDICO PSICO PEDAGOGICO INFANTIL;Endereço: AV SAO PAULO, 677 – JARDIM SAO PAULO;Fone: 3355–4268</string>
	<string name="unid15">Unidade: CAPS DAVID CAPISTRANO;Endereço: RUA VIRGINIA HERACLIO, S/N – IPSEP;Fone: 3355–4276</string>
	<string name="unid16">Unidade: CAPS AD PROFESSOR JOSE LUCENA;Endereço: RUA ITAJAI, 418 – IMBIRIBEIRA;Fone: 3355–4256</string>
	<string name="unid17">Unidade: CAPS ESPACO LIVREMENTE;Endereço: RUA MINISTRO NELSON HUNGRIA, 36 – BOA VIAGEM;Fone: 3355–4284</string>
	<string name="menu_settings">Settings</string>
    <string name="tab_um">Autismo Amor</string>
    <string name="tab_dois">Estou Autista</string>
    <string name="tab_tres">Autism Speaks</string>
</resources>